// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`users reducer handles actions - setUsers sets users when empty 1`] = `
Immutable.Map {
  "039ea1be861812ac6e210c96ac54fd2523f6d738a2db460613cc9aa8bd1886607f": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "034b0c8c8555259d37b4193e03a09d5f803ebbcb1988edc72fe3d6912a4687512d": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0214dc56ab3467e74b3bc1fed80d08e0146b251caceddc2ad6bfe37caca5fcc2e5": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #2",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0279b8ef97aa2c9d402c7c86dcc37e3f979165450ac2bc708bc6897ae33af97d52": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #2",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "026918cbe1c9ace24ff065006c06b3c6344a5d7203ad42a45ddc7c7a41c6edfcc2": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #3",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "03dfe22ffb15850264c08462781e228682e9d333da50d395ab07f2a1535b595444": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #3",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
}
`;

exports[`users reducer handles actions - setUsers sets users with same usernames 1`] = `
Immutable.Map {
  "039ea1be861812ac6e210c96ac54fd2523f6d738a2db460613cc9aa8bd1886607f": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #6",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "034b0c8c8555259d37b4193e03a09d5f803ebbcb1988edc72fe3d6912a4687512d": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #6",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0214dc56ab3467e74b3bc1fed80d08e0146b251caceddc2ad6bfe37caca5fcc2e5": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #7",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "0279b8ef97aa2c9d402c7c86dcc37e3f979165450ac2bc708bc6897ae33af97d52": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #7",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "026918cbe1c9ace24ff065006c06b3c6344a5d7203ad42a45ddc7c7a41c6edfcc2": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #8",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "03dfe22ffb15850264c08462781e228682e9d333da50d395ab07f2a1535b595444": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #8",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
}
`;

exports[`users reducer handles epics - createOrUpdateUser sends registration message 1`] = `
Array [
  Array [
    "ztestsapling1mwmpvwy2aah7dlt0c9l47gde982xv6snxq2srddfzx8efn2qht6mxnz65rtst0426gtxje0eqlm",
    Array [
      Object {
        "address": "ztestsapling1ggtntm4dgfc0remdxzex0pz722swjtqxc7wxj4eeqksmups04dkhjvcj5vcklmud2y3yvgj302m",
        "amount": "0.0001",
        "memo": "051778bce918ceca3d656a49c73f316b86e8bab1f3c9f9ee30214ac4c0581b78bc1f5773823720a125dea71e3d71274035769b2e5ff3f74d3dfc5033a2ba58d1955c8116b4746573746e616d65000000000000000000000000746573746c6173746e616d6500000000000000006e69636b6e616d65000000000000000000000000027a746573747361706c696e67316d776d707677793261616837646c743063396c3437676465393832787636736e78713273726464667a783865666e32716874366d786e7a363572747374303432366774786a653065716c6d000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000000",
      },
    ],
    1,
    0.0001,
  ],
]
`;

exports[`users reducer handles epics - fetch users when users 1`] = `
Immutable.Map {
  "035302fc10b2dc5cbe747779cd1cbcd7fe111161e09282e210d72dee9f6e68b17a": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #9",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "037128c776aa4b67f744425a67968562667d8793c4ea52aef214a912772f80ebf0": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #9",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "02b7e647acb166a81139b1bcbdde82b8df610f1fb93af5edd0359dd0d7138d9166": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #10",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
  "03c5eb408fd7016d9f27547abd54110de58644e4d29b63cee5401a51e1f409df67": Immutable.UserData {
    "firstName": "testname",
    "lastName": "testlastname",
    "nickname": "nickname #10",
    "address": "ztestsapling14dxhlp8ps4qmrslt7pcayv8yuyx78xpkrtfhdhae52rmucgqws2zp0zwf2zu6qxjp96lzapsn4r",
  },
}
`;
